# fluffy-dashboard

./: .clang-tidy  .gitignore  DecodeAirFlow.h  DecodeCatalystTemperature.h  DecodeEquivalenceRatio.h  DecodeEvapPressure.h  DecodeFloatStrategy.h  DecodeFuelPressure.h  DecodeFuelRailPressure.h  DecodeFuelTrim.h  DecodeOxygenSensorCurrent.h  DecodeOxygenSensorVoltage.h  DecodePercentage.h  DecodeRPM.h  DecodeSignedPercentage.h  DecodeSimpleA.h  DecodeSimpleAB.h  DecodeTemperature.h  DecodeTimingAdvance.h  LICENSE  OBD.pro  README.md  constants.h  databuffer.h  mainwindow.cpp  mainwindow.h  obd.cpp  obd.h  unittype.h  utils.cpp  utils.h
Source/: .clang-tidy  CMakeLists.txt
Source/cmake/: Clangformat.cmake  Clangtidy.cmake  CodeCoverage.cmake  Sanitizer.cmake  Warnings.cmake
Source/core/: CMakeLists.txt  OBD.pro  databuffer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  obd.cpp  obd.h  speedunits.h  utils.cpp  utils.h
Source/core/Decoders/: DecodeBitEncoded.h  DecodeCatalystTemperature.h  DecodeEquivalenceRatio.h  DecodeFuelPressure.h  DecodeSignedPercentage.h  DecodeTemperature.h  DecodeTimingAdvance.h
Source/core/diagnostic-manager/: diagnostic-manager.cpp  diagnostic-manager.h
Source/core/obd-access/: CMakeLists.txt  bluetooth-obd-access.cpp  bluetooth-obd-access.h  bluetooth-provider.cpp  bluetooth-provider.h  device.cpp  device.h  obd-access.cpp  obd-access.h  usb-obd-access.cpp  usb-obd-access.h  usb-serial-provider.cpp  usb-serial-provider.h
Source/core/parameters-engine/: bluetooth-provider.h  command-repository.h  data-decoding-handler.h  data-filters.h  data-obtainer-handler.h  dtc-handler.cpp  dtc-handler.h  legacy-data-decoding-handler.h  parameters-engine.cpp  parameters-engine.h  response.cpp  response.h  test-handler.cpp  test-handler.h  usb-serial-provider.cpp  usb-serial-provider.h
Source/core/parameters-engine/Decoders/: DecodeAirFlow.h  DecodeBitEncoded.h  DecodeDTC.h  DecodeEquivalenceRatio.h  DecodeEvapPressure.h  DecodeFuelPressure.h  DecodeFuelRailPressure.h  DecodeOxygenSensorCurrent.h  DecodeOxygenSensorVoltage.h  DecodePercentage.h  DecodeRPM.h  DecodeSimpleA.h  DecodeSimpleAB.h  DecodeStrategy.h  DecodeTemperature.h  DecodeTimingAdvance.h
Source/core/parameters-engine/ELM327/: elm327-command-repository.cpp  elm327-command-repository.h  elm327-data-decoder.cpp  elm327-data-decoder.h  elm327-data-filter.cpp  elm327-data-filter.h  elm327-data-filters.cpp  elm327-data-filters.h  elm327-dtc-handler.cpp  elm327-dtc-handler.h  elm327-engine.cpp  elm327-engine.h
Source/core/parameters-engine/data-obtainer-handlers/: elm327-data-obtainer.cpp  elm327-data-obtainer.h  elm327-dtc-handler.cpp  elm327-dtc-handler.h
Source/core/utils/: CMakeLists.txt  system-calls.h
Source/fluffy-obd-lib/: CMakeLists.txt
Source/fluffy-obd-lib/CommandProcessor/elm327/: elm327-command-processor.cpp  elm327-command-repository.cpp  elm327-data-decoder.cpp  elm327-data-parser.cpp  elm327-dtc-handler.cpp  elm327-engine.cpp
Source/fluffy-obd-lib/CommandProcessor/elm327/include/: elm327-command-processor.hpp  elm327-command-repository.hpp  elm327-data-decoder.hpp  elm327-data-parser.hpp  elm327-decoders.hpp  elm327-engine.hpp  (+1 more)
Source/fluffy-obd-lib/CommandProcessor/interface/: ICommandProcessor.cpp  response.cpp
Source/fluffy-obd-lib/diagnostics-engine/: CMakeLists.txt
Source/fluffy-obd-lib/diagnostics-engine/base/: command-repository.hpp  diagnostics-engine.cpp  diagnostics-engine.hpp  response.cpp  response.hpp  test-handler.cpp
Source/fluffy-obd-lib/diagnostics-engine/decoders/: CMakeLists.txt  Decode.hpp  DecodeAirFlow.hpp  DecodeBitEncoded.hpp  DecodeCountAB.hpp  DecodeDTC.hpp  DecodeEquivalenceRatio.hpp  DecodeEvapPressure.hpp  DecodeFuelPressure.hpp  DecodeFuelRailPressure.hpp  DecodeOxygenSensorCurrent.hpp  DecodeOxygenSensorVoltage.hpp  DecodePercentage.hpp  DecodeRPM.hpp  DecodeSimpleA.hpp  DecodeSimpleAB.hpp  DecodeStrategy.hpp  DecodeTemperature.hpp  DecodeTimingAdvance.hpp
Source/fluffy-obd-lib/diagnostics-engine/diagnostics-engine-base/: CMakeLists.txt  command-repository.hpp  data-decoding-handler.hpp  data-filters.hpp  diagnostics-engine.cpp  diagnostics-engine.hpp  dtc-handler.cpp  dtc-handler.hpp  legacy-command-repository.hpp  obd-command-pid.hpp  response.cpp  response.hpp  test-handler.cpp
Source/fluffy-obd-lib/diagnostics-engine/elm327/: CMakeLists.txt  elm327-command-repository.cpp  elm327-command-repository.hpp  elm327-data-decoder.cpp  elm327-data-decoder.hpp  elm327-data-filter.cpp  elm327-data-filter.hpp  elm327-data-parser.cpp  elm327-data-parser.hpp  elm327-engine.cpp  elm327-engine.hpp
Source/fluffy-obd-lib/obd-access/: CMakeLists.txt  bluetooth-obd-access.cpp  bluetooth-obd-access.hpp  bluetooth-provider.cpp  bluetooth-provider.hpp  device.cpp  device.hpp  logging.cpp  logging.hpp  obd-access.cpp  obd-access.hpp  obd-serial-provider.cpp  obd-serial-provider.hpp  serial-obd-access.cpp  system-calls.hpp  usb-obd-access.cpp  usb-obd-access.hpp  usb-serial-provider.cpp  usb-serial-provider.hpp
Source/fluffy-obd-lib/obd-access/include/: bluetooth-obd-access.hpp  bluetooth-provider.hpp  device.hpp  logging.hpp  obd-access.hpp  obd-serial-provider.hpp  serial-obd-access.hpp  system-calls.hpp
Source/fluffy-obd-lib/utils/: CMakeLists.txt  system-calls.hpp
Source/fluffy-tests/: bluetooth-obd-access.h  data-filters.h  decorders.h  fluffy-tests.pro  main.cpp  obd-access-utils.h  usb-obd-access.h
Source/fluffy-tests/elm327/: decorders.h  elm327-live-data.h  parser.h
Source/obd-scanner/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Source/obd-scanner/res/: icons.qrc
Source/tests/obd-lib/: CMakeLists.txt  main.cpp  obd-access-utils.h  usb-obd-access.h
Source/tests/obd-lib/elm327/: decoders.h  elm327-live-data.h  parser.h
Source/tests/obd-lib/integration/: CMakeLists.txt  bluetoothDevice.hpp  main.cpp  serialDevice.hpp  test-helpers.hpp
Source/tests/obd-lib/unit/: CMakeLists.txt  bluetooth-obd-access.h  gtest_dependency.pri  main.cpp  obd-access-utils.h  serial-obd-access.h  usb-obd-access.h
(+101 files in other folders)
